styles/index.css
:root {
  /* Font Family */
  --font-primary: 'Poppins', sans-serif;
  --font-secondary: 'Montserrat', sans-serif;

  /* themes color */
  --clr-primary: #AA003C;
  /* e50050 */
  --clr-secondary: #f4f4f4;
  --clr-tertiary: #0c0d0d;
  --clr-gray: #d1d1d1;
  --clr-subtitle: #80001F;
  --clr-body-white: #3f4042;
  --clr-white: #ffffff;

  --shadow-white-3: 5px 5px 15px #D1D9E6, -5px -5px 15px var(--clr-white);

  /* Gradients */
  --gradient-box-w: linear-gradient(145deg, #e2e8ec, var(--clr-white));
  --gradient-red-hover: linear-gradient(145deg, var(--clr-primary), var(--clr-subtitle));

  /* Font weight */
  --fw-regular: 400;
  --fw-medium: 500;
  --fw-bold: 700;

  --transition: all 0.4s ease-in-out;
}

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html body.overflow-hidden { 
  overflow: hidden !important; 
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: var(--font-primary);
  font-size: 16px;
  color: var(--clr-body-white);
  background-color: var(--clr-secondary);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--font-secondary);
  color: var(--clr-tertiary);
  margin: 0;
  margin-bottom: 20px;
}

ul {
  list-style: none;
}

a {
  color: inherit;
  text-decoration: none;
}

.container {
  max-width: 1280px;
  padding: 0 16px;
  margin: 0 auto;
}

.flex {
  display: flex;
  align-items: center;
}

.flex-column {
  flex-direction: column;
}

.emphasise-txt {
  color: var(--clr-primary);
}

a.emphasise-txt {
  text-decoration: underline;
}

.section-title {
  margin: 2rem 0;
  font-size: 3.5rem;
  line-height: 4rem;
}

.section-subtitle {
  font-size: 14px;
  letter-spacing: 3px;
  text-transform: uppercase;
  font-weight: var(--fw-medium);
}

/* =========== HEADER ========== */
.main-header {
  position: sticky;
  top: 0;
  width: 100%;
  padding: 0 64px;
  box-shadow: var(--shadow-white-3);
  background-color: var(--clr-secondary);
  z-index: 999;
}

.header-wrapper {
  padding: 1rem 0;
  justify-content: space-between;
}

.logo-wrapper {
  z-index: 100;
}

.header_logo-round {
  background-color: var(--clr-body-white);
  border-radius: 50%;
  border: 4px solid var(--clr-gray);
}

.logo-title {
  margin: 0;
  margin-left: 20px;
  margin-left: 1rem;
  text-transform: uppercase;
  letter-spacing: 0.5px;
}

.nav-item {
  margin-left: 2rem;
}

.nav-link {
  display: inline-block;
  text-transform: uppercase;
  letter-spacing: 1px;
  transition: var(--transition);
  padding: 12px 0;
}

.nav-link:hover {
  color: var(--clr-tertiary);
  transform: translateY(-1px);
}

.nav-link.active {
  color: var(--clr-subtitle);
}

.mob-burger {
  border: none;
}

/* ============= hero-section =============== */
.hero-section {
  height: 90vh;
  justify-content: center;
  text-align: center;
}

.hero-header h2 {
  margin-bottom: 5rem;
  font-size: 2.5rem;
  line-height: 3rem;
}

.hero-header .section-subtitle {
  color: var(--clr-body-white);
}

.social-caption {
  margin: 1rem 0;
  text-transform: uppercase;
  font-weight: var(--fw-medium);
  font-size: 20px;
}

.hero-section .social-list {
  justify-content: center;
}

.social-item {
  margin-right: 2rem;
  width: 48px;
  height: 48px;
  box-shadow: var(--shadow-white-3);
  background: var(--gradient-box-w);
  font-size: 16px;
  border-radius: 4px;
}

.social-item:last-of-type {
  margin-right: 0;
}

.social-link {
  border-radius: 4px;
  display: inline-block;
  width: 100%;
  height: 100%;
  line-height: 48px;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: var(--transition);
}

.social-link:hover {
  background: var(--gradient-red-hover);
  color: var(--clr-secondary);
}

.social-link svg {
  width: 18px;
  height: 18px;
  fill: var(--clr-body-white);
}

.section-separator {
  height: 1px;
  background: #dce1e4;
  border: none;
}

/* ============= about-section =============== */

/* =========== Features & Portfolio ============ */

.features-section,
.portfolio-section,
.contact-section, 
.resume-section {
  padding: 5rem 0;
}

.features-list,
.portfolio-list,
.resume-list {
  margin-top: 5rem;
  display: grid;
  gap: 2rem;
  justify-items: center;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
}

.features-item,
.portfolio-item,
.resume-item {
  padding: 2rem;
  box-shadow: var(--shadow-white-3);
  background: var(--gradient-box-w);
  border-radius: 8px;
}

.portfolio-item {
  text-align: center;
}

.features-icon {
  text-align: center;
}

.features-icon svg {
  fill: var(--clr-primary);
  width: 32px;
  height: 32px;
}

.features-title,
.portfolio-title,
.resume-title {
  margin: 1rem 0;
  font-weight: var(--fw-medium);
  font-size: 24px;
  line-height: 32px;
  text-align: center;
  vertical-align: baseline;
}

.portfolio-title svg {
  opacity: 0;
  width: 24px;
  position: relative;
  top: 4px;
}

.portfolio-item:hover {
  cursor: pointer;
}

.portfolio-item:hover .portfolio-title {
  fill: var(--clr-subtitle);
  transition: var(--transition);
}

.portfolio-item:hover .portfolio-title svg {
  opacity: 1;
  margin-left: 8px;
  transition: var(--transition);
}

.portfolio-screen {
  width: 100%;
  height: auto;
}

.portfolio-link-btn,
.resume-link-btn {
  display: inline-block;
  margin-top: 2rem;
  padding: 15px 35px;
  background: var(--gradient-box-w);
  box-shadow: var(--shadow-white-3);
  color: var(--clr-primary);
  text-transform: uppercase;
  font-size: 14px;
  font-weight: var(--fw-medium);
  border-radius: 4px;
  transition: var(--transition);
}

.portfolio-link-btn:active,
.portfolio-link-btn:hover,
.portfolio-link-btn:focus,
.resume-link-btn:active,
.resume-link-btn:hover,
.resume-link-btn:focus {
  color: var(--clr-white);
  background: var(--gradient-red-hover);
}

.portfolio-link-btn>i,
.resume-link-btn>i {
  display: inline-block;
  margin-left: 8px;
}

/* ============= resume-section =============== */
.resume-section {
  padding-left: 2rem;
  padding-right: 2rem;
}
/* ... */

